Bug 345281 - importing ldif data fails to get alternate addresses for a given contact
Summary: importing ldif data fails to get alternate addresses for a given contact
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-17 20:35 UTC by Manuel Díaz
Modified: 2015-03-19 06:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.16.7
Sentry Crash Report:


Attachments
testcase (329 bytes, text/x-ldif)
2015-03-17 22:44 UTC, Manuel Díaz
Details
testcase (259 bytes, text/x-ldif)
2015-03-17 22:51 UTC, Manuel Díaz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel Díaz 2015-03-17 20:35:14 UTC
When importing ldif data only main address is imported for a given contact, the other addresses get lost. So, addresses with "otherMailbox" tag in source file are ignored.

Reproducible: Always

Steps to Reproduce:
1.File -> Import -> Import ldif file, select file ldif file and AddressBook
2.Display imported contact, that had multiple email addresses in ldif file
3.

Actual Results:  
Only one address (main) imported

Expected Results:  
All addresses imported

This is my test file:
dn: cn=John Doe,mail=john_doe@foobar.com
cn: John Doe
mail: john_doe@foobar.com
modifyTimeStamp: 20091027T215509Z
otherMailbox: john_doe-1@foobar.com
otherMailbox: john_doe-2@foobar.com
givenName: John
sn: Doe
gender: male
objectclass: top
objectclass: person
Comment 1 Manuel Díaz 2015-03-17 22:17:04 UTC
OpenSUSE 13.2
KAddressBook 4.14.5
Comment 2 Laurent Montel 2015-03-17 22:22:04 UTC
Please provide a test case.
Thanks
Comment 3 Manuel Díaz 2015-03-17 22:44:27 UTC
Created attachment 91610 [details]
testcase
Comment 4 Manuel Díaz 2015-03-17 22:45:23 UTC
Same data as in Description, attached
Comment 5 Manuel Díaz 2015-03-17 22:51:32 UTC
Created attachment 91612 [details]
testcase
Comment 6 Laurent Montel 2015-03-18 07:03:50 UTC
 Thanks a lot I will test it and investigate it
Comment 7 Laurent Montel 2015-03-18 07:20:17 UTC
Git commit 681c68762915d22734865665315fddac6d7e7535 by Montel Laurent.
Committed on 18/03/2015 at 07:19.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 345281 - importing ldif data fails to get alternate addresses for a given contact
FIXED-IN: 4.16.7

M  +2    -1    kabc/ldifconverter.cpp

http://commits.kde.org/kdepimlibs/681c68762915d22734865665315fddac6d7e7535
Comment 8 Laurent Montel 2015-03-18 07:20:58 UTC
It's fixed now. Could you give me info about program which export second email as otherMailbox please .?
Comment 9 Manuel Díaz 2015-03-18 16:42:42 UTC
The Bat! <https://www.ritlabs.com/en/products/thebat/> (Win mail client)

Thank you.
Comment 10 Laurent Montel 2015-03-19 06:17:58 UTC
Ok thanks.
I created a unittest to validate it so it' s ok now.
I fixed import birthday too. They use xbatBirthday as variable. It's ok now too.