Fix Bug 345281 - importing ldif data fails to get alternate addresses for a given contact

BUG: 345281
FIXED-IN: 4.16.7